Feat: SCIM support (#837)
* write down impl notes

* add `scim_v2` dependency

* create DB migrations for `failed_scim_tasks`

* impl first prototype for `FailedScrimTask`

* prepare `scim` service

* add `APPLICATION_JSON_SCIM` constant `content-type`

* remove `scim_v2` again and directly impl reduced and optimized scim schemas

* fix test errors for `anti_lockout()`

* old code cleanup

* add db migrations for `clients_scim`

* impl `ClientScim` + basic ops

* impl `ScimClient::sync_groups()` + `ScimClient::create_group()` + `ScimClient::update_group()`

* impl `ScimClient::create_update_group()`

* impl `ScimClient::delete_group()`

* update dev_notes

* add `clients_scim.sync_groups` to DB migrations

* change logic for `get_user()` and `get_group()` to always try `externalId` first and use `displayName` / `userName` as fallback automatically

* impl `ClientScim::create_update_user()` + `ClientScim::create_user()` +
`ClientScim::update_user()` + `ClientScim::delete_user()` + `ClientScim::update_groups_assignment()`

* "finish" scim sync task impl's

* optimizations, code rework, respect `client.scopes` during `ScimUser` build

* execute SCIM syncs on `/groups` API endpoints

* catch and persist `FailedScimTask` on user action errors

* trigger SCIM updates on all relevant `/users` endpoints

* trigger full `SCIM` syncs on changed scim config for a client and include the data in `ClientResponse`

* UI: impl components to be able to modify client scim config

* basic CRUD working after manual testing against `scim.dev` - group prefix tests TODO

* initial full user sync fixed on client config change

* all tests against `scim.dev` successful and behave like expected

* new config vars `SCIM_SYNC_DELETE_GROUPS` + `SCIM_SYNC_DELETE_USERS` and make sure all tests against `scim.dev` are fine

* impl and use `ErrorResponseType::Scim`

* update expired SCIM users on scheduled disable

* UI: use `InputPassword` for SCIM bearer token

* rework `failed_scim_tasks` table a

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1137,6 +1137,37 @@ POW_DIFFICULTY=20
 POW_EXP=30
 
 #####################################
+############### SCIM ################
+#####################################
+
+# If set to `true`, already possibly synced groups / users on a
+# SCIM server may be deleted if either sync if disabled further
+# down the road.
+# Depending on your clients specifically, deleting a group / user
+# can have a major impact, like e.g. maybe the user had important
+# data inside that application that would be deleted automatically
+# as well. Depending on your use case, you may want to handle
+# deletions manually.
+#
+# If set to false, only the `externalId` field would be removed
+# for the targeted resources, but they would not be fully deleted.
+# This will basically unlink the resource from Rauthy, leaving it
+# behind independent.
+#
+# default: false
+SCIM_SYNC_DELETE_GROUPS=true
+SCIM_SYNC_DELETE_USERS=true
+
+# The maximum amount of retries made for a failed SCIM task.
+# Failed tasks will be retried every 60 - 90 seconds from all
+# cluster nodes. The timeout between retries is randomized to
+# avoid overloading clients. It will be executed on each cluster
+# member to increase the chance of a update in case of network
+# segmentations.
+# default: 100
+SCIM_RETRY_COUNT=100
+
+#####################################
 ############# SERVER ################
 #####################################
 
