send CORS headers in different places if specifically allowed for a client

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -58,6 +58,10 @@ OPEN_USER_REG=true
 # and make sure it still exists. It will also extract the `client_id` the token
 # has been originally issued for from the `azp` claim, fetch it and make sure it
 # still exists and is enabled.
+#
+# If you need CORS headers on the /userinfo endpoint, you must enable strict mode,
+# because otherwise the additional data would be missing.
+#
 # If you don't need the extra validations, you can set this to `false` to
 # save some resources, if your clients to a lot of `/userinfo` lookups.
 # default: true
