--- a/src/common/Cargo.toml
+++ b/src/common/Cargo.toml
@@ -11,6 +11,7 @@ rauthy-error = { path = "../error" }
 actix-web = { workspace = true }
 argon2 = { workspace = true }
 base64 = { workspace = true }
+bincode = { workspace = true }
 brotli = { workspace = true }
 chrono = { workspace = true }
 cidr = { workspace = true }
@@ -25,6 +26,7 @@ rand = { workspace = true }
 rand_core = { workspace = true }
 regex = { workspace = true }
 reqwest = { workspace = true }
+serde = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
 
