--- a/rauthy-test.cfg
+++ b/rauthy-test.cfg
@@ -14,7 +14,7 @@ AUTH_HEADERS_ENABLE=true
 
 PASSWORD_RESET_COOKIE_BINDING=true
 
-RAUTHY_ADMIN_EMAIL="admin@localhost.de"
+RAUTHY_ADMIN_EMAIL="admin@localhost"
 
 # Limits the maximum amount of parallel password hashes at the exact same time to never exceed system memory while
 # still allowing a good amount of memory for the argon2id algorithm (default: 2)
