--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -3,7 +3,7 @@
 #####################################
 
 # If 'true', the data store will be initialized with DEV values.
-# The default password for 'admin@localhost.de' is '123SuperSafe'
+# The default password for 'admin@localhost' is '123SuperSafe'
 # default: false
 # !!! DO NOT USE IN PRODUCTION !!!
 DEV_MODE=true
@@ -720,7 +720,7 @@ DYN_CLIENT_REG_TOKEN="123SuperSafe"
 
 # This contact information will be added to the `rauthy`client
 # within the anti lockout rule with each new restart.
-RAUTHY_ADMIN_EMAIL="admin@localhost.de"
+RAUTHY_ADMIN_EMAIL="admin@localhost"
 
 # Will be used as the prefix for the E-Mail subject for each E-Mail
 # that will be sent out to a client.
@@ -870,7 +870,7 @@ EPHEMERAL_CLIENTS_CACHE_LIFETIME=3600
 #####################################
 
 # The E-Mail address event notifications should be sent to.
-EVENT_EMAIL=admin@localhost.de
+EVENT_EMAIL=admin@localhost
 
 # Matrix variables for event notifications.
 # `EVENT_MATRIX_USER_ID` and `EVENT_MATRIX_ROOM_ID` are mandatory.
