use global HTTP client for Slack notifications and add note about Matrix to config

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1028,7 +1028,12 @@ EVENT_LEVEL_FAILED_LOGIN=info
 ## that Rauthy uses for all different kind's of tasks,
 ## like e.g. fetching ephemeral client information,
 ## remote JWKS, connecting to Upstream Auth Providers,
-## or to Matrix / Slack for notifications.
+## or for Slack notifications.
+##
+## NOTE: The only exception is the Matrix Event
+## Notification client, if you have this configured.
+## Because of the internal structure of Matrix dependencies,
+## this cannot easily re-use the global client!
 ##
 ## Rauthy creates a single Lazily Initialized instance
 ## with connection pooling to reduce the amount of TLS
