allow insecure HTTP during integration tests

--- a/rauthy-test.cfg
+++ b/rauthy-test.cfg
@@ -82,3 +82,6 @@ ENABLE_DYN_CLIENT_REG=true
 
 BACKCHANNEL_DANGER_ALLOW_HTTP=true
 BACKCHANNEL_DANGER_ALLOW_INSECURE=true
+
+HTTP_DANGER_UNENCRYPTED=true
+HTTP_DANGER_INSECURE=true
