update changelog + book

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -733,6 +733,7 @@ EMAIL_SUB_PREFIX="Rauthy IAM"
 # You might want to set `SMTP_DANGER_INSECURE=true` if you
 # need this for local dev.
 SMTP_URL=localhost
+# optional, default will be used depending on TLS / STARTTLS
 #SMTP_PORT=
 #SMTP_USERNAME=
 #SMTP_PASSWORD=
