--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -550,11 +550,16 @@ HQL_PASSWORD_DASHBOARD=JGFyZ29uMmlkJHY9MTkkbT0zMix0PTIscD0xJE9FbFZURnAwU0V0bFJ6Z
 # These will be ignored as long as `HIQLITE=true`.
 PG_HOST=localhost
 # default: 5432
-PG_PORT=5432
+#PG_PORT=5432
 PG_USER=rauthy
 PG_PASSWORD=123SuperSafe
 # default: rauthy
-PG_DB_NAME=rauthy
+#PG_DB_NAME=rauthy
+
+# If your database uses a self-signed certificate, which cannot
+# be verified, you might want to set this to `true`.
+# default: false
+PG_TLS_NO_VERIFY=true
 
 # Max DB connections for the Postgres pool.
 # default: 20
