build nightly + update changelog (#884)
* bump nightly version

* fix tests and include pow in requests

* add `*/webauthn/auth/*` to `SessionState::Init` exceptions

* bump nightly once again

* add warning logs if TLS < 1.2

* update changelog + book

* remove the last usages of `DATABASE_URL` and `DbType::Sqlite`

* update changelogs + books with changed postgres setup

* fix `public.*` fields for DB migration

* build default root store for pg tls connections

* mention `PG_TLS_NO_VERIFY` in changelog + book and make sure it works on a real deployment

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -447,25 +447,6 @@ HQL_SECRET_API=SuperSecureSecret1337
 ############ DATABASE ###############
 #####################################
 
-# Connection string to connect to a Postgres database.
-# This will be ignored as long as `HIQLITE=true`.
-#
-# Format: 'postgresql://User:PasswordWithoutSpecialCharacters@localhost:5432/DatabaseName'
-#
-# NOTE: The password in this case should be alphanumeric.
-# Special characters could cause problems in the connection string.
-#
-# CAUTION: To make the automatic migrations work with Postgres 15+,
-# when you do not want to just use the `postgres` user, You need
-# to have a user with the same name as the DB / schema. For instance,
-# the following would work without granting extra access to the
-# `public` schema which is disabled by default since PG15:
-# database: rauthy
-# user: rauthy
-# schema: rauthy with owner rauthy
-#
-DATABASE_URL=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
-
 # If specified, the currently configured Database will be
 # DELETED and OVERWRITTEN with a migration from the given
 # database with this variable. Can be used to migrate between
@@ -477,7 +458,7 @@ DATABASE_URL=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
 # !!! USE WITH CARE !!!
 #
 #MIGRATE_DB_FROM=sqlite:data/state_machine/db/hiqlite.db
-#MIGRATE_DB_FROM=postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
+#MIGRATE_DB_FROM=postgresql
 
 # If `MIGRATE_DB_FROM=postgres`, these values are mandatory to open the
 # database connection to the Postgres database you want to migrate away from.
@@ -564,14 +545,21 @@ HQL_PASSWORD_DASHBOARD=JGFyZ29uMmlkJHY9MTkkbT0zMix0PTIscD0xJE9FbFZURnAwU0V0bFJ6Z
 # default: 30
 #HEALTH_CHECK_DELAY_SECS=30
 
-# postgresql://rauthy:123SuperSafe@localhost:5432/rauthy
+# If you set `HIQLITE=false` and want to use Postgres as your database,
+# you need to set the following variables.
+# These will be ignored as long as `HIQLITE=true`.
 PG_HOST=localhost
 # default: 5432
-PG_PORT=5432
+#PG_PORT=5432
 PG_USER=rauthy
 PG_PASSWORD=123SuperSafe
 # default: rauthy
-PG_DB_NAME=rauthy
+#PG_DB_NAME=rauthy
+
+# If your database uses a self-signed certificate, which cannot
+# be verified, you might want to set this to `true`.
+# default: false
+PG_TLS_NO_VERIFY=true
 
 # Max DB connections for the Postgres pool.
 # default: 20
@@ -733,6 +721,7 @@ EMAIL_SUB_PREFIX="Rauthy IAM"
 # You might want to set `SMTP_DANGER_INSECURE=true` if you
 # need this for local dev.
 SMTP_URL=localhost
+# optional, default will be used depending on TLS / STARTTLS
 #SMTP_PORT=
 #SMTP_USERNAME=
 #SMTP_PASSWORD=
