--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1343,6 +1343,11 @@ SSP_THRESHOLD=1000
 # currently only possible with a custom build from source.
 # The content however can mostly be set here.
 # If the below values are not set, the default will be taken.
+#
+# NOTE: All the TPL_* values below exist for multiple languages.
+# Their name is always the same, just with the other language tag
+# as UPPERCASE.
+# Available language tags: EN, DE, KO, ZH_HANS
 
 # New Password E-Mail
 #TPL_EN_PASSWORD_NEW_SUBJECT="New Password"
@@ -1354,15 +1359,6 @@ SSP_THRESHOLD=1000
 #TPL_EN_PASSWORD_NEW_BUTTON="Set Password"
 #TPL_EN_PASSWORD_NEW_FOOTER=""
 
-#TPL_DE_PASSWORD_NEW_SUBJECT="Passwort Reset angefordert"
-#TPL_DE_PASSWORD_NEW_HEADER="Passwort Reset angefordert für"
-#TPL_DE_PASSWORD_NEW_TEXT=""
-#TPL_DE_PASSWORD_NEW_CLICK_LINK="Klicken Sie auf den unten stehenden Link für den Passwort Reset."
-#TPL_DE_PASSWORD_NEW_VALIDITY="Dieser Link ist aus Sicherheitsgründen nur für kurze Zeit gültig."
-#TPL_DE_PASSWORD_NEW_EXPIRES="Link gültig bis:"
-#TPL_DE_PASSWORD_NEW_BUTTON="Passwort Setzen"
-#TPL_DE_PASSWORD_NEW_FOOTER=""
-
 # Password Reset E-Mail
 #TPL_EN_RESET_SUBJECT="Password Reset Request"
 #TPL_EN_RESET_HEADER="Password reset request for"
@@ -1372,15 +1368,6 @@ SSP_THRESHOLD=1000
 #TPL_EN_RESET_EXPIRES="Link expires:"
 #TPL_EN_RESET_BUTTON="Reset Password"
 #TPL_EN_RESET_FOOTER=""
-
-#TPL_DE_RESET_SUBJECT="Passwort Reset angefordert"
-#TPL_DE_RESET_HEADER="Passwort Reset angefordert für"
-#TPL_DE_RESET_TEXT=""
-#TPL_DE_RESET_CLICK_LINK="Klicken Sie auf den unten stehenden Link für den Passwort Reset."
-#TPL_DE_RESET_VALIDITY="Dieser Link ist aus Sicherheitsgründen nur für kurze Zeit gültig."
-#TPL_DE_RESET_EXPIRES="Link gültig bis:"
-#TPL_DE_RESET_BUTTON="Passwort Zurücksetzen"
-#TPL_DE_RESET_FOOTER=""
 
 #####################################
 ############### TLS #################
