--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ strip = false
 [patch.crates-io]
 cryptr = { git = "https://github.com/sebadob/cryptr" }
 hiqlite = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite" }
+hiqlite-macros = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite-macros" }
 
 [workspace.dependencies]
 accept-language = "3"
@@ -59,6 +60,7 @@ futures-util = "0.3"
 gethostname = "1"
 hex = { version = "0.4", features = ["serde"] }
 hiqlite = { version = "0.6.0-20250410", features = ["cache", "dashboard", "listen_notify_local"] }
+hiqlite-macros = { version = "0.6.0-20250410" }
 hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
 hmac-sha512 = { version = "1.1.5", features = ["traits010", "sha384"] }
 image = { version = "0.25.1", default-features = false, features = [
@@ -73,7 +75,6 @@ libflate = "2.1.0"
 mime = "0.3.17"
 mime_guess = "2"
 num_cpus = "1"
-num-traits = "0.2.19"
 once_cell = "1.19.0"
 openssl = { version = "0.10.72", features = ["vendored"] }
 openssl-sys = { version = "0.9.105", features = ["vendored"] }
