--- a/src/models/Cargo.toml
+++ b/src/models/Cargo.toml
@@ -31,6 +31,7 @@ flume = { workspace = true }
 futures-util = { workspace = true }
 hex = { workspace = true }
 hiqlite = { workspace = true }
+hiqlite-macros = { workspace = true }
 hmac-sha256 = { workspace = true }
 hmac-sha512 = { workspace = true }
 image = { workspace = true }
@@ -39,7 +40,6 @@ jwt-simple = { workspace = true }
 lettre = { workspace = true }
 mime = { workspace = true }
 num_cpus = { workspace = true }
-num-traits = { workspace = true }
 once_cell = { workspace = true }
 openssl = { workspace = true }
 openssl-sys = { workspace = true }
