--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,9 @@ lto = false
 strip = false
 
 [patch.crates-io]
-cryptr = { git = "https://github.com/sebadob/cryptr" }
-hiqlite = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite" }
-hiqlite-macros = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite-macros" }
+#cryptr = { git = "https://github.com/sebadob/cryptr" }
+#hiqlite = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite" }
+#hiqlite-macros = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite-macros" }
 
 [workspace.dependencies]
 accept-language = "3"
@@ -48,7 +48,7 @@ chacha20poly1305 = { version = "0.10", features = ["std"] }
 chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
 cidr = "0.3.0"
 cron = "0.15"
-cryptr = { version = "0.6.0-20250422", features = ["s3", "streaming"] }
+cryptr = { version = "0.6.0", features = ["s3", "streaming"] }
 css-color = "0.2"
 deadpool = { version = "0.12", features = ["rt_tokio_1", "serde"] }
 deadpool-postgres = "0.14"
@@ -59,8 +59,8 @@ futures = "0.3"
 futures-util = "0.3"
 gethostname = "1"
 hex = { version = "0.4", features = ["serde"] }
-hiqlite = { version = "0.6.0-20250410", features = ["cache", "dashboard", "listen_notify_local"] }
-hiqlite-macros = { version = "0.6.0-20250410" }
+hiqlite = { version = "0.6.0", features = ["cache", "dashboard", "listen_notify_local"] }
+hiqlite-macros = { version = "0.6.0" }
 hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
 hmac-sha512 = { version = "1.1.5", features = ["traits010", "sha384"] }
 image = { version = "0.25.1", default-features = false, features = [
