--- a/rauthy-client/Cargo.toml
+++ b/rauthy-client/Cargo.toml
@@ -39,9 +39,9 @@ rand = "0.9"
 reqwest = { version = "0.12.12", default-features = false, features = [
     "brotli", "json", "rustls-tls", "rustls-tls-webpki-roots"
 ] }
-ring = "0.17.13"
 serde = { version = "1.0.180", features = ["derive"] }
 serde_json = "1.0.100"
+sha2 = "0.10.9"
 thiserror = { version = "2" }
 tokio = "1.34"
 tracing = "0.1.40"
