rauthy-client: start backchannel logout integration

--- a/rauthy-client/Cargo.toml
+++ b/rauthy-client/Cargo.toml
@@ -23,6 +23,7 @@ axum = [
     "dep:axum",
     "dep:axum-extra",
 ]
+backchannel-logout = []
 device-code = []
 qrcode = ["device-code", "dep:qrcode"]
 userinfo = []
