--- a/rauthy-client/examples/axum/Cargo.toml
+++ b/rauthy-client/examples/axum/Cargo.toml
@@ -6,6 +6,8 @@ authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
 license = "Apache-2.0"
 
 [dependencies]
+rauthy-client = { path = "../..", features = ["axum", "backchannel-logout", "userinfo"] }
+
 anyhow = "1.0.75"
 axum = { version = "0.8.1", features = ["http2"] }
 axum-extra = { version = "0.10.0", features = ["cookie"] }
@@ -13,5 +15,3 @@ dotenvy = "0.15.7"
 tokio = { version = "1.43.1", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
-
-rauthy-client = { path = "../..", features = ["axum", "userinfo"] }
