--- a/rauthy-client/justfile
+++ b/rauthy-client/justfile
@@ -39,13 +39,14 @@ check: clippy-examples
     cargo minimal-versions check --features axum
     cargo minimal-versions check --features device-code
     cargo minimal-versions check --features userinfo
+    cargo minimal-versions check --features scim,axum
 
 # runs the full set of tests
 test test="":
     #!/usr/bin/env bash
     set -euxo pipefail
     clear
-    cargo test {{ test }}
+    cargo test --features scim {{ test }}
     echo All tests successful
 
 # builds the code
