--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,6 +105,7 @@ serde_json = "1"
 serde_json_path = "0.7.1"
 serde_rusqlite = "0.38"
 serde_urlencoded = "0.7.1"
+#smartstring = "1.0.1"
 spow = { version = "0.6", features = ["server"] }
 strum = { version = "0.27", features = ["derive"] }
 svg-hush = "0.9.4"
