--- a/src/error/Cargo.toml
+++ b/src/error/Cargo.toml
@@ -14,6 +14,7 @@ chrono = { workspace = true }
 css-color = { workspace = true }
 cryptr = { workspace = true }
 deadpool = { workspace = true }
+ed25519-compact = { workspace = true }
 hiqlite = { workspace = true }
 image = { workspace = true }
 openssl = { workspace = true }
@@ -21,6 +22,7 @@ openssl-sys = { workspace = true }
 reqwest = { workspace = true }
 rio_turtle = { workspace = true }
 rusqlite = { workspace = true }
+rsa = { workspace = true }
 ruma = { workspace = true }
 s3-simple = { workspace = true }
 serde = { workspace = true }
