--- a/src/bin/Cargo.toml
+++ b/src/bin/Cargo.toml
@@ -9,6 +9,7 @@ license.workspace = true
 rauthy-common = { path = "../common" }
 rauthy-error = { path = "../error" }
 rauthy-handlers = { path = "../api" }
+rauthy-jwt = { path = "../jwt" }
 rauthy-middlewares = { path = "../middlewares" }
 rauthy-models = { path = "../models" }
 rauthy-schedulers = { path = "../schedulers" }
