--- a/src/models/Cargo.toml
+++ b/src/models/Cargo.toml
@@ -43,6 +43,7 @@ num_cpus = { workspace = true }
 once_cell = { workspace = true }
 openssl = { workspace = true }
 openssl-sys = { workspace = true }
+rand_08 = { package = "rand", version = "0.8" }
 rand_core = { workspace = true }
 reqwest = { workspace = true }
 ring = { workspace = true }
