--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = ["src/*"]
 exclude = ["rauthy-client"]
 
 [workspace.package]
-version = "0.29.4-20250514-jemalloc"
+version = "0.29.4"
 edition = "2024"
 authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
 license = "Apache-2.0"
@@ -35,7 +35,7 @@ actix = "0.13"
 actix-multipart = "0.7.2"
 actix-web = { version = "4", features = ["rustls-0_23"] }
 actix-web-lab = "0.24"
-actix-web-prom = "0.9.0"
+actix-web-prom = "0.10"
 anyhow = "1"
 askama = "0.14"
 argon2 = { version = "0.5", features = ["std", "zeroize"] }
@@ -79,8 +79,7 @@ openssl = { version = "0.10.72", features = ["vendored"] }
 openssl-sys = { version = "0.9.105", features = ["vendored"] }
 oxiri = "0.2.2"
 postgres-types = { version = "0.2.6", features = ["derive"] }
-# blocked by actix-web-prom
-prometheus = "0.13"
+prometheus = "0.14"
 rand = "0.9"
 rand_core = { version = "0.9", features = ["std"] }
 refinery = { version = "0.8.14", features = ["tokio-postgres"] }
