--- a/src/bin/Cargo.toml
+++ b/src/bin/Cargo.toml
@@ -20,6 +20,7 @@ chrono = { workspace = true }
 cryptr = { workspace = true }
 dotenvy = { workspace = true }
 flume = { workspace = true }
+hiqlite-macros = { workspace = true }
 num_cpus = { workspace = true }
 openssl = { workspace = true }
 openssl-sys = { workspace = true }
