configurable `TOKEN_LEN_LIMIT` + added debug assertions as safeguards

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -230,6 +230,19 @@ SUSPICIOUS_REQUESTS_BLACKLIST=1440
 # default: false
 SUSPICIOUS_REQUESTS_LOG=true
 
+# Sets the limit in characters for the maximum JWT token length that 
+# will be accepted when validating it. The default of 4096 is high 
+# enough that you should never worry about this value. A typical 
+# `id_token` with quite a few additional custom attributes and scopes, 
+# signed with RS512, will usually be below 2000 characters. 
+# 
+# Only if you create very big tokens and you get errors on the 
+# `/userinfo` for instance, you might want to increase this value.
+# Otherwise, don't worry about it.
+#
+# default: 4096 
+TOKEN_LEN_LIMIT=4096
+
 #####################################
 ######## BACKCHANNEL LOGOUT #########
 #####################################
@@ -1397,57 +1410,7 @@ HQL_TLS_API_CERT=tls/cert-chain.pem
 HQL_TLS_API_DANGER_TLS_NO_VERIFY=true
 
 #####################################
-############# WEBAUTHN ##############
-#####################################
-
-# The 'Relaying Party (RP) ID' - effective domain name (default: localhost)
-# CAUTION: When this changes, already registered devices will stop working and users cannot log in anymore!
-RP_ID=localhost
-
-# Url containing the effective domain name (default: http://localhost:8080)
-# If you want to test Webauthn via the Svelte DEV UI, change the port number to :5173.
-# CAUTION: Must include the port number!
-#RP_ORIGIN=http://localhost:8080
-RP_ORIGIN=http://localhost:5173
-
-# Non critical RP Name
-# Has no security properties and may be changed without issues (default: Rauthy Webauthn)
-RP_NAME='Rauthy Webauthn'
-
-# The Cache lifetime in seconds for Webauthn requests. Within this time, a webauthn request must have been validated.
-# (default: 60)
-WEBAUTHN_REQ_EXP=60
-
-# The Cache lifetime for additional Webauthn Data like auth codes and so on. Should not be lower than WEBAUTHN_REQ_EXP.
-# The value is in seconds (default: 90)
-WEBAUTHN_DATA_EXP=90
-
-# With webauthn enabled for a user, he needs to enter username / password on a new system. If these credentials are
-# verified, rauthy will set an additional cookie, which will determine how long the user can then use only (safe)
-# MFA passwordless webauthn login with Yubikeys, apple touch id, windows hello, ... until he needs to verify his
-# credentials again.
-# Passwordless login is generally much safer than logging in with a password. But sometimes it is possible, that the
-# Webauthn devices do not force the user to include a second factor, which in that case would be a single factor login
-# again. That is why we should ask for the original password in addition once in a while to set the cookie.
-# The value is in hours (default: 2160)
-WEBAUTHN_RENEW_EXP=2160
-
-# This feature can be set to 'true' to force User verification during the Webauthn ceremony.
-# UV will be true, if the user does not only need to verify its presence by touching the key, but by also providing
-# proof that he knows (or is) some secret via a PIN or biometric key for instance.
-# With UV, we have a true MFA scenario where UV == false (user presence only) would be a 2FA scenario (with password).
-# Be careful with this option, since Android and some special combinations of OS + browser to not support UV yet.
-# (default: false)
-#WEBAUTHN_FORCE_UV=true
-
-# Can be set to 'true' to disable password expiry for users that have at least one active passkey.
-# When set to 'false', the same password expiry from the set policy will apply to these users as well.
-# With this option active, rauthy will ignore any password expiry set by the password policy for Webauthn users.
-# default: true
-WEBAUTHN_NO_PASSWORD_EXPIRY=true
-
-#####################################
-######### User Pictures #############
+######### USER PICTURES #############
 #####################################
 
 # The storage type for user pictures.
@@ -1498,3 +1461,53 @@ WEBAUTHN_NO_PASSWORD_EXPIRY=true
 #
 # default: false
 #PICTURE_PUBLIC=false
+
+#####################################
+############# WEBAUTHN ##############
+#####################################
+
+# The 'Relaying Party (RP) ID' - effective domain name (default: localhost)
+# CAUTION: When this changes, already registered devices will stop working and users cannot log in anymore!
+RP_ID=localhost
+
+# Url containing the effective domain name (default: http://localhost:8080)
+# If you want to test Webauthn via the Svelte DEV UI, change the port number to :5173.
+# CAUTION: Must include the port number!
+#RP_ORIGIN=http://localhost:8080
+RP_ORIGIN=http://localhost:5173
+
+# Non critical RP Name
+# Has no security properties and may be changed without issues (default: Rauthy Webauthn)
+RP_NAME='Rauthy Webauthn'
+
+# The Cache lifetime in seconds for Webauthn requests. Within this time, a webauthn request must have been validated.
+# (default: 60)
+WEBAUTHN_REQ_EXP=60
+
+# The Cache lifetime for additional Webauthn Data like auth codes and so on. Should not be lower than WEBAUTHN_REQ_EXP.
+# The value is in seconds (default: 90)
+WEBAUTHN_DATA_EXP=90
+
+# With webauthn enabled for a user, he needs to enter username / password on a new system. If these credentials are
+# verified, rauthy will set an additional cookie, which will determine how long the user can then use only (safe)
+# MFA passwordless webauthn login with Yubikeys, apple touch id, windows hello, ... until he needs to verify his
+# credentials again.
+# Passwordless login is generally much safer than logging in with a password. But sometimes it is possible, that the
+# Webauthn devices do not force the user to include a second factor, which in that case would be a single factor login
+# again. That is why we should ask for the original password in addition once in a while to set the cookie.
+# The value is in hours (default: 2160)
+WEBAUTHN_RENEW_EXP=2160
+
+# This feature can be set to 'true' to force User verification during the Webauthn ceremony.
+# UV will be true, if the user does not only need to verify its presence by touching the key, but by also providing
+# proof that he knows (or is) some secret via a PIN or biometric key for instance.
+# With UV, we have a true MFA scenario where UV == false (user presence only) would be a 2FA scenario (with password).
+# Be careful with this option, since Android and some special combinations of OS + browser to not support UV yet.
+# (default: false)
+#WEBAUTHN_FORCE_UV=true
+
+# Can be set to 'true' to disable password expiry for users that have at least one active passkey.
+# When set to 'false', the same password expiry from the set policy will apply to these users as well.
+# With this option active, rauthy will ignore any password expiry set by the password policy for Webauthn users.
+# default: true
+WEBAUTHN_NO_PASSWORD_EXPIRY=true
