--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,6 @@ image = { version = "0.25.1", default-features = false, features = [
     "jpeg", "png", "webp"
 ] }
 itertools = "0.14"
-jwt-simple = { version = "0.12.6", default-features = false, features = ["pure-rust"] }
 lettre = { version = "0.11", default-features = false, features = [
     "builder", "smtp-transport", "tokio1-rustls-tls", "tracing"
 ] }
@@ -104,6 +103,7 @@ serde_json = "1"
 serde_json_path = "0.7.1"
 serde_rusqlite = "0.38"
 serde_urlencoded = "0.7.1"
+#smartstring = "1.0.1"
 spow = { version = "0.6", features = ["server"] }
 strum = { version = "0.27", features = ["derive"] }
 svg-hush = "0.9.4"
