--- a/src/error/Cargo.toml
+++ b/src/error/Cargo.toml
@@ -14,14 +14,17 @@ chrono = { workspace = true }
 css-color = { workspace = true }
 cryptr = { workspace = true }
 deadpool = { workspace = true }
+ed25519-compact = { workspace = true }
 hiqlite = { workspace = true }
 image = { workspace = true }
 openssl = { workspace = true }
 openssl-sys = { workspace = true }
 reqwest = { workspace = true }
+ring = { workspace = true }
 rio_turtle = { workspace = true }
-rusqlite = { workspace = true }
 ruma = { workspace = true }
+rusqlite = { workspace = true }
+rsa = { workspace = true }
 s3-simple = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
