more improvements + some profiling + balanced jemalloc config

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -515,7 +515,7 @@ HQL_LOG_STATEMENTS=true
 # travel through the Raft and have their own dedicated connection.
 #
 # default: 4
-#HQL_READ_POOL_SIZE=4
+HQL_READ_POOL_SIZE=4
 
 # Enables immediate flush + sync to disk after each Log Store Batch.
 # The situations where you would need this are very rare, and you
