fix JSON escaped `federation_uid`s

--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -29,6 +29,31 @@ DEV_DPOP_HTTP=true
 # default: false
 HQL_INSECURE_COOKIE=true
 
+# Can be set to true to start the WAL handler even if the
+# `lock.hql` file exists. This may be necessary after a
+# crash, when the lock file could not be removed during a
+# graceful shutdown.
+#
+# IMPORTANT: Even though the Database can "heal" itself by
+# simply rebuilding from the existing Raft log files without
+# even needing to think about it, you may want to only
+# set `HQL_IGNORE_WAL_LOCK` when necessary to have more
+# control. Depending on the type of crash (whole OS, maybe
+# immediate power loss, force killed, ...), it may be the
+# case that the WAL files + metadata could not be synced
+# to disk properly and that quite a bit of data is lost.
+#
+# In such a case, it is usually a better idea to delete
+# the whole volume and let the broken node rebuild from
+# other healthy cluster members, just to be sure.
+#
+# However, you can decide to ignore the lock file and start
+# anyway. But you must be 100% sure, that no orphaned
+# process is still running and accessing the WAL files!
+#
+# default: false
+HQL_IGNORE_WAL_LOCK=true
+
 # Can be set to 'true' for local testing a container image.
 # This will load values from './rauthy-local_test.cfg' instead
 # of './rauthy.cfg'.
