--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = ["src/*"]
 exclude = ["rauthy-client"]
 
 [workspace.package]
-version = "0.29.4"
+version = "0.30.0-20250528"
 edition = "2024"
 authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
 license = "Apache-2.0"
@@ -26,6 +26,7 @@ lto = false
 strip = false
 
 [patch.crates-io]
+#hiqlite = { path = "../hiqlite/hiqlite", package = "hiqlite" }
 #hiqlite = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite" }
 #hiqlite-macros = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite-macros" }
 
@@ -103,7 +104,6 @@ serde_json = "1"
 serde_json_path = "0.7.1"
 serde_rusqlite = "0.38"
 serde_urlencoded = "0.7.1"
-#smartstring = "1.0.1"
 spow = { version = "0.6", features = ["server"] }
 strum = { version = "0.27", features = ["derive"] }
 svg-hush = "0.9.4"
