Update book with E-Mail testing + change default for `SMTP_FROM` to `rauthy@localhost`

--- a/rauthy-local_test.cfg
+++ b/rauthy-local_test.cfg
@@ -90,8 +90,8 @@ HQL_PASSWORD_DASHBOARD=JGFyZ29uMmlkJHY9MTkkbT0zMix0PTIscD0xJE9FbFZURnAwU0V0bFJ6Z
 #SMTP_USERNAME=
 #SMTP_PASSWORD=
 #SMTP_URL=smtp.change.me
-# Format: "Rauthy <rauthy@localhost.de>"
-SMTP_FROM="Rauthy <rauthy@localhost.de>"
+# Format: "Rauthy <rauthy@localhost>"
+SMTP_FROM="Rauthy <rauthy@localhost>"
 
 #####################################
 ###### ENCRYPTION / HASHING #########
