--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -763,8 +763,8 @@ SMTP_URL=localhost
 #SMTP_PORT=
 #SMTP_USERNAME=
 #SMTP_PASSWORD=
-# Format: "Rauthy <rauthy@localhost.de>"
-# default: "Rauthy <rauthy@localhost.de>"
+# Format: "Rauthy <rauthy@localhost>"
+# default: "Rauthy <rauthy@localhost>"
 #SMTP_FROM=
 
 # The number of retries that should be done for connecting to
