--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -29,31 +29,6 @@ DEV_DPOP_HTTP=true
 # default: false
 HQL_INSECURE_COOKIE=true
 
-# Can be set to true to start the WAL handler even if the
-# `lock.hql` file exists. This may be necessary after a
-# crash, when the lock file could not be removed during a
-# graceful shutdown.
-#
-# IMPORTANT: Even though the Database can "heal" itself by
-# simply rebuilding from the existing Raft log files without
-# even needing to think about it, you may want to only
-# set `HQL_IGNORE_WAL_LOCK` when necessary to have more
-# control. Depending on the type of crash (whole OS, maybe
-# immediate power loss, force killed, ...), it may be the
-# case that the WAL files + metadata could not be synced
-# to disk properly and that quite a bit of data is lost.
-#
-# In such a case, it is usually a better idea to delete
-# the whole volume and let the broken node rebuild from
-# other healthy cluster members, just to be sure.
-#
-# However, you can decide to ignore the lock file and start
-# anyway. But you must be 100% sure, that no orphaned
-# process is still running and accessing the WAL files!
-#
-# default: false
-HQL_IGNORE_WAL_LOCK=true
-
 # Can be set to 'true' for local testing a container image.
 # This will load values from './rauthy-local_test.cfg' instead
 # of './rauthy.cfg'.
@@ -480,6 +455,39 @@ HQL_SECRET_API=SuperSecureSecret1337
 # a file on disk with `file:path/to/enc/keys/file`
 # default: env
 #HQL_ENC_KEYS_FROM=env
+
+# Set to `false` to store Cache WAL files + Snapshots in-memory only.
+# Depending on your environment and setup, this can lead to cluster
+# issues if a node crashes and cannot do a graceful shutdown. It is not
+# recommended to keep the Raft state in-memory only, apart from for
+# testing and in special cases.
+# default: true
+HQL_CACHE_STORAGE_DISK=true
+
+# Can be set to true to start the WAL handler even if the
+# `lock.hql` file exists. This may be necessary after a
+# crash, when the lock file could not be removed during a
+# graceful shutdown.
+#
+# IMPORTANT: Even though the Database can "heal" itself by
+# simply rebuilding from the existing Raft log files without
+# even needing to think about it, you may want to only
+# set `HQL_IGNORE_WAL_LOCK` when necessary to have more
+# control. Depending on the type of crash (whole OS, maybe
+# immediate power loss, force killed, ...), it may be the
+# case that the WAL files + metadata could not be synced
+# to disk properly and that quite a bit of data is lost.
+#
+# In such a case, it is usually a better idea to delete
+# the whole volume and let the broken node rebuild from
+# other healthy cluster members, just to be sure.
+#
+# However, you can decide to ignore the lock file and start
+# anyway. But you must be 100% sure, that no orphaned
+# process is still running and accessing the WAL files!
+#
+# default: false
+HQL_IGNORE_WAL_LOCK=true
 
 #####################################
 ############ DATABASE ###############
@@ -1334,7 +1342,7 @@ ADDITIONAL_ALLOWED_ORIGIN_SCHEMES="tauri myapp"
 
 # To enable or disable the additional HTTP server to expose the /metrics endpoint
 # default: false
-METRICS_ENABLE=true
+#METRICS_ENABLE=true
 
 # The IP address to listen on for the /metrics endpoint.
 # You do not want to expose your metrics on a publicly reachable endpoint!
