--- a/rauthy.cfg
+++ b/rauthy.cfg
@@ -1342,7 +1342,7 @@ ADDITIONAL_ALLOWED_ORIGIN_SCHEMES="tauri myapp"
 
 # To enable or disable the additional HTTP server to expose the /metrics endpoint
 # default: false
-#METRICS_ENABLE=true
+METRICS_ENABLE=true
 
 # The IP address to listen on for the /metrics endpoint.
 # You do not want to expose your metrics on a publicly reachable endpoint!
