fix wrong default value for `swagger_ui_external` and create better default for `HTTP_WORKERS`

--- a/src/bin/Cargo.toml
+++ b/src/bin/Cargo.toml
@@ -38,6 +38,7 @@ tracing-subscriber = { workspace = true }
 tokio = { workspace = true }
 utoipa-swagger-ui = { workspace = true }
 
+# jemalloc does not work properly on msvc targets
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = { workspace = true, optional = true }
 
